name: hoauth
version: 0.2.3
category: Network,Protocol,OAuth
license: BSD3
license-file: LICENSE
author: Diego Souza
maintainer: Diego Souza <dsouza at bitforest.org>
stability: experimental
build-type: Simple
cabal-version: >= 1.6
synopsis: A Haskell implementation of OAuth 1.0a protocol.
description: This library implements all PLAINTEXT, HMAC-SHA1 and RSA-SHA1
             signatures as defined in the specification 1.0. Currently it
             supports only /consumer/ related functions, but there are plans to
             add support /service providers/ as well.

             More on OAuth protocol info at: <http://oauth.net/>

library
  build-depends: base<5
                ,bytestring>=0.9.1.5
                ,binary>=0.5.0.2
                ,SHA>=1.4.1.1
                ,dataenc>=0.13.0.2
                ,utf8-string>=0.3.4
                ,time>=1.1.4
                ,old-locale>=1.0.0.2
                ,random>=1.0.0.2
                ,curl>=1.3.5
                ,mtl>=1.1.0.2
  exposed-modules: Network.OAuth.Http.Request
                  ,Network.OAuth.Http.Response
                  ,Network.OAuth.Http.HttpClient
                  ,Network.OAuth.Http.PercentEncoding
                  ,Network.OAuth.Http.Util
                  ,Network.OAuth.Consumer

  hs-source-dirs: src/main/haskell
  ghc-options: -W -Wall -fwarn-tabs

source-repository head
  type:     git
  location: git@github.com:dsouza/hoauth.git
